--- a/content/post/2022-10-13-blog-post-1/index.Rmd
+++ b/content/post/2022-10-13-blog-post-1/index.Rmd
@@ -7,7 +7,7 @@ categories: []
 tags: []
 description: The three data sets we are considering to work with.
 toc: yes
-authors: [Yang Zhou, Jingxuan Guo, Zhiyue Wu]
+authors: [Yang Zhou, Jingxuan Guo, Zhiyue Wu, Duoyifu Xu, Ruiqing Yang]
 series: []
 lastmod: '2022-10-13T22:04:47-04:00'
 featuredVideo: ~
