--- a/content/post/2022-10-21-blog-post-2/index.Rmd
+++ b/content/post/2022-10-21-blog-post-2/index.Rmd
@@ -45,6 +45,9 @@ cc %>%
 Beneficence 
 Our data about college completion does not contain personal information, so basically the dataset itself doesn't have risks to individuals and communities. The data also does not expose any sensitive information about people. Through analyzing the data, we can obtain some information about the relation, for example, among standardized test scores, aid value, completion rate, which may benefit the colleges by affecting their decision on admitting students. There may be some limits for the data. For instance, the data are given per school, but there may be some outliers in the data per student, which is not given in our dataset, and after calculation, transfering into our data, our conclusion based on these data may be a little different from the real one because of the existence of the outliers.
 
+Respect for persons
+Having respect for people is the key principle for data practice because people are able to make informed decisions when they have the information and freedom to act on it. It allows for people from different circumstances to hold their special consideration and protection. This principle is relevant to our dataset as other similar data involving school information are collected from numerous college students from different races, backgrounds, parents' incoming level and other factors that could possibly influence their school stats, so informed consent is strongly necessary when collecting their information. However there is no personal information about students themself being collected in our data set, therefore we are unsure whether consent was sent out to each student. We will be continuing discussing these principles when we have a deeper understanding of this data set and looking for some limitations.
+
 Justice
 The value of the data rests fundamentally on credibility and accuracy, and the principle of justice is a key point to ensure that our data is credible and accurate. The justice of our data is reflected in the control of independent variables, namely, strictly dividing the target object and filtering out some samples that are unfair relative to the whole. For example, data on dropouts and transfers are excluded from graduation data. At the same time, our data challenge traditional models of ethnic classification. To be fair we excluded some racially ambiguous data. 
 In addition, Anonymous data statistics ensure the authenticity of the results, which is also a reflection of justice for different graduate income groups.
