--- a/content/post/2022-11-03-blog-post-4/index.Rmd
+++ b/content/post/2022-11-03-blog-post-4/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Blog Post 4"
 author: "GWXYZ"
-date: "2022-11-03"
+date: '2022-11-03'
 slug: []
 categories: []
 tags: []
@@ -9,11 +9,11 @@ description: data cleaning and deeper exploration of data
 toc: yes
 authors: []
 series: []
-lastmod: "2022-11-03T20:18:36-04:00"
-featuredVideo: null
-featuredImage: null
+lastmod: '2022-11-03T21:18:45-04:00'
+featuredVideo: ~
+featuredImage: ~
 ---
-  ## Change of dataset
+## Change of dataset
   NBA player stats 
 https://github.com/peasant98/TheNBACSV/blob/master/nbaNew.csv
 
