--- a/content/post/2022-11-12-blog-post-5/index.Rmd
+++ b/content/post/2022-11-12-blog-post-5/index.Rmd
@@ -33,12 +33,29 @@ playoffs <- nba_clean%>%
                  "NOP", "CLE", "TOR", "BOS", "MIL",
                  "DET"))
 
-Illness <- read_html("https://hashtagbasketball.com/injury/illness")
-(Illness_node <- Illness %>% html_node(".col-md-12"))
-Illness_table <- Illness_node %>% html_table() %>% select(-(RETURNED))
-colnames(Illness_table)[colnames(Illness_table) %in% c('INJURED ON','DAYS MISSED')] <- c('Illness_year','Illess_days_missed')
-Illness_table$Illness_year <- substr(Illness_table$Illness_year,nchar(Illness_table$Illness_year)-3,nchar(Illness_table$Illness_year))
-Illness_table %>% mutate(across(starts_with("Illness"),
-                                ~ as.numeric(as.character(.))))
+Injury <- read_csv("/Users/xuduoyifu/Desktop/大四/MA415/HW/ma4615-fa22-final-project-gwxyz/dataset/injuries_2010-2020 2.csv", col_types = cols_only(Date = col_character(), Team = col_character(), Relinquished = col_character()))
 
+colnames(Injury)[3] <- "PlayerName"
+colnames(Injury)[1] <- "SeasonStart"
+colnames(Injury)[2] <- "Tm"
+Injury <- Injury %>% filter(!is.na(PlayerName))
+Injury <- Injury %>% mutate(injuries_data = 1)
+Injury$SeasonStart <- substr(Injury$SeasonStart,1,4)
+Injury_clean <- Injury %>% filter(SeasonStart %in% c("2014","2015","2016"))
+playoffs <- nba_clean%>%
+  filter(SeasonStart%in%c("2014","2015","2016"))%>%
+  filter(Tm%in%c("IND","MIA", "TOT", "CHA", "WAS", "BRK","CHI", "ATL","SAS","OKC","LAC","HOU","POR","GSW","MEM","DAL",
+                 "NOP", "CLE", "TOR", "BOS", "MIL",
+                 "DET"))
+playoffs$SeasonStart <- as.character(playoffs$SeasonStart)
+Injury_clean<- Injury_clean %>%
+  mutate(Tm = recode(Tm, 'Pacers' = 'IND', 'Heat' = 'MIA','Hornets' = 'CHA','Wizards' = 'WAS','Nets' = 'BRK',
+                       'Bulls' = 'CHI','Hawks' = 'ATL','Spurs' = 'SAS','Thunder' = 'OKC', 'Thunder' = 'LAC','Rockets' = 'HOU',
+                       'Blazers' = 'POR','Warriors' = 'GSW','Grizzlies' = 'MEM','Mavericks' = 'DAL','Pelicans' = 'NOP','Cavaliers' = 'CLE',
+                       'Raptors' = 'TOR','Celtics' = 'BOS','Bucks' = 'MIL','Pistons' = 'DET'))%>%
+  filter(Tm%in%c("IND","MIA", "TOT", "CHA", "WAS", "BRK","CHI", "ATL","SAS","OKC","LAC","HOU","POR","GSW","MEM","DAL",
+                   "NOP", "CLE", "TOR", "BOS", "MIL",
+                   "DET"))
+
+combine <- playoffs %>% left_join(Injury_clean, by = c("PlayerName","SeasonStart","Tm"))
 ```
