--- a/content/post/2022-11-12-blog-post-5/index.Rmd
+++ b/content/post/2022-11-12-blog-post-5/index.Rmd
@@ -25,15 +25,9 @@ In order to combine the datasets, we need to further clean our original datasets
 library(tidyverse)
 library(rvest)
 
-nba_clean <- read_csv("/Users/xuduoyifu/Desktop/大四/MA415/HW/ma4615-fa22-final-project-gwxyz/dataset/nba_clean.csv")
+nba_clean <- read_csv(here::here("dataset", "nba_clean.csv"))
 
-playoffs <- nba_clean%>%
-  filter(SeasonStart%in%c("2014","2015","2016"))%>%
-  filter(Tm%in%c("IND","MIA", "TOT", "CHA", "WAS", "BRK","CHI", "ATL","SAS","OKC","LAC","HOU","POR","GSW","MEM","DAL",
-                 "NOP", "CLE", "TOR", "BOS", "MIL",
-                 "DET"))
-
-Injury <- read_csv("/Users/xuduoyifu/Desktop/大四/MA415/HW/ma4615-fa22-final-project-gwxyz/dataset/injuries_2010-2020 2.csv", col_types = cols_only(Date = col_character(), Team = col_character(), Relinquished = col_character()))
+Injury <- read_csv(here::here("dataset", "injuries_2010-2020 2.csv"), col_types = cols_only(Date = col_character(), Team = col_character(), Relinquished = col_character()))
 
 colnames(Injury)[3] <- "PlayerName"
 colnames(Injury)[1] <- "SeasonStart"
@@ -57,5 +51,7 @@ Injury_clean<- Injury_clean %>%
                    "NOP", "CLE", "TOR", "BOS", "MIL",
                    "DET"))
 
-combine <- playoffs %>% left_join(Injury_clean, by = c("PlayerName","SeasonStart","Tm"))
+combine <- playoffs %>% left_join(Injury_clean, by = c("PlayerName","SeasonStart","Tm"))%>% 
+  mutate(injuries_data = coalesce(injuries_data, 0))
+
 ```
